in process of adding authentication

--- a/Magellano/WebAPI/appsettings.json
+++ b/Magellano/WebAPI/appsettings.json
@@ -9,5 +9,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtOptions": {
+    "SecretKey": "secretkey",
+    "ExpiresHours": "23"
+  }
 }
