created register, continuing

--- a/Magellano/WebAPI/appsettings.json
+++ b/Magellano/WebAPI/appsettings.json
@@ -11,7 +11,7 @@
   },
   "AllowedHosts": "*",
   "JwtOptions": {
-    "SecretKey": "secretkey",
+    "SecretKey": "mysupersecret_secretsecretsecretkey!123mysupersecret_secretsecretsecretkey!123",
     "ExpiresHours": "23"
   }
 }
